--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
     />
 
+    <!-- ChatBot -->
+    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/08/17/04/20250817042253-QIIF5PKR.js" defer></script>
+    
+
     <title>Amika Subasinghe</title>
   </head>
   <body>
